update some files

--- a/example/extends.html
+++ b/example/extends.html
@@ -9,7 +9,7 @@
     <h1>Extends Optin Demo</h1>
     <hr>
     <div id="app">
-        {{message}}
+        ${message}
         <p><button @click="add">add</button></p>
     </div>
 
