--- a/index.html
+++ b/index.html
@@ -117,6 +117,16 @@
             <a href="./example/vue-resource.html">vue-resource</a>
         </li>
     </ol>
+
+    <h3>第六季：Vue之router</h3>
+    <ol>
+        <li>
+            <a href="./vue-router/solt.html">slot-组件的内容扩展</a>
+        </li>
+        <li>
+            <a href="./vue-router/vue-resource.html">vue-resource</a>
+        </li>
+    </ol>
 </body>
 
 </html>
