--- a/example/v-other.html
+++ b/example/v-other.html
@@ -19,14 +19,14 @@
     <hr>
     <div id="app">
         <!-- <div v-pre>{{message}}</div> -->
-        <!-- <div v-cloak>
+        <div v-cloak>
             {{ message }}
-          </div> -->
+        </div>
 
-        <div v-once>第一次绑定的值：{{message}}</div>
+        <!-- <div v-once>第一次绑定的值：{{message}}</div>
         <div>
             <input type="text" v-model="message">
-        </div>
+        </div> -->
     </div>
     <script type="text/javascript">
         var app = new Vue({
