--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
         <li>
             <a href="./example/examples3.html">examples Event Demo-实例事件</a>
         </li>
+        <li>
+            <a href="./example/nextTick.html">examples NextTick Demo-实例事件</a>
+        </li>
     </ol>
     <hr>
     <h3>第五季：Vue内置组件</h3>
