--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
         <li>
             <a href="./example/component-4.html">component:组件-4 components who</a>
         </li>
+        <li>
+            <a href="./example/propAndEmit.html">propAndEmit</a>
+        </li>
     </ol>
     <hr>
     <h3>第三季：Vue选项</h3>
