--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
         <li>
             <a href="./example/otherOption.html">Other Optin</a>
         </li>
+        <li>
+            <a href="./example/transitionAndAnimation.html">transitionAndanimation</a>
+        </li>
     </ol>
     <hr>
     <h3>第四季：Vue实例</h3>
@@ -112,6 +115,9 @@
         <li>
             <a href="./example/nextTick.html">examples NextTick Demo-实例事件</a>
         </li>
+        <li>
+            <a href="./example/modal.html">Modal实例</a>
+        </li>
     </ol>
     <hr>
     <h3>第五季：Vue内置组件</h3>
@@ -121,6 +127,9 @@
         </li>
         <li>
             <a href="./example/vue-resource.html">vue-resource</a>
+        </li>
+        <li>
+            <a href="./example/slot.html">vue-slot</a>
         </li>
     </ol>
 
