--- a/example/slot.html
+++ b/example/slot.html
@@ -4,48 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <script type="text/javascript" src="../assets/js/vue.js"></script>
-    <title>Slot content extend Demo</title>
+    <title>slot内容分发</title>
 </head>
 
 <body>
-    <h1>Slot content extend Demo</h1>
-    <hr>
     <div id="app">
-        <jspang>
-            <span slot="bolgUrl">{{jspangData.bolgUrl}}</span>
-            <span slot="netName">{{jspangData.netName}}</span>
-            <span slot="skill">{{jspangData.skill}}</span>
-        </jspang>
+        <!--使用包含slot标签属性的子组件-->
+        <my-slot>
+            <!--属性slot值需要与子组件中slot的name值匹配-->
+            <p slot="title">{{title+'1'}}</p>
+            <p slot="title">{{title+'2'}}</p>
+            <div slot="content">{{content}}</div>
+        </my-slot>
     </div>
-
-
-    <template id="tmp">
-    <div>
-        <p>博客地址：<slot name="bolgUrl"></slot></p>   
-        <p>网名：<slot name="netName"></slot></p>
-        <p>技术类型：<slot name="skill"></slot></p>
-        
-    </div>
-</template>
-
     <script type="text/javascript">
-        var jspang = {
-            template: '#tmp'
-        }
+        //注册my-slot组件，包含<slot>标签，且设定唯一标识name
+        Vue.component('my-slot', {
+            template: '<div><div class="title"><slot name="title"></slot></div><div class="content"><slot name="content"></slot></div></div>'
+        });
 
-        var app = new Vue({
-            el: '#app',
+        var vm = new Vue({
+            el: "#app",
             data: {
-                jspangData: {
-                    bolgUrl: 'http://jspang.com',
-                    netName: '技术胖',
-                    skill: 'Web前端'
-                }
-            },
-            components: {
-                "jspang": jspang
+                title: "This is a title",
+                content: 'This is the content'
             }
-        })
+        });
     </script>
 </body>
 
