--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <a href="../example/v-on.html">v-on实例</a>
         </li>
         <li>
+            <a href="../example/v-on-declare.html">v-on修饰符实例</a>
+        </li>
+        <li>
             <a href="../example/v-model.html">v-model实例</a>
         </li>
         <li>
