--- a/example/v-on-declare.html
+++ b/example/v-on-declare.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Hello World</title>
+    <title>v-on修饰符实例</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -10,18 +10,23 @@
 </head>
 
 <body>
-    <h1>HelloWorld</h1>
+    <h1>v-on实例</h1>
     <hr>
     <div id="app">
-        {{message.split('')|limitBy 3 1}}
+        <div v-on:click="saySelf('click from inner')" v-on:click.self="saySelf('click from self')">
+            <button v-on:click="saySelf('button click')">button</button>
+            <button v-on:click.stop="saySelf('just button click')">button</button>
+        </div>
     </div>
     <script type="text/javascript">
         var app = new Vue({
             el: '#app',
-            data: {
-                message: 'hell world!'
+            methods: {
+                saySelf(msg) {
+                    alert(msg);
+                }
             }
-        })
+        });
     </script>
 </body>
 
