--- a/example/vue.extend.html
+++ b/example/vue.extend.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Vue.extend</h1>
     <hr>
-    <author id="author"></author>
+    <div id="author"></div>
 
     <script type="text/javascript">
         var authorExtend = Vue.extend({
