--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         <li>
             <a href="../example/v-other.html">v-pre&v-cloak&v-once</a>
         </li>
+        <li>
+            <a href="./example/vue-render.html">Vue.render 实例</a>
+        </li>
     </ol>
     <hr>
     <h3>第二季：Vue全局AIP</h3>
@@ -50,6 +53,10 @@
         <li>
             <a href="./example/vue.extend.html">Vue.extend 构造器延伸</a>
         </li>
+        <li>
+            <a href="./example/vue.filter.html">Vue.filter 过滤器</a>
+        </li>
+
         <li>
             <a href="./example/vue.set.html">Vue.set 全局操作</a>
         </li>
