--- a/example/propsdata.html
+++ b/example/propsdata.html
@@ -10,22 +10,29 @@
 <body>
     <h1>propsData Option Demo</h1>
     <hr>
-    <header></header>
+    <div id="blog-post-demo">
+        <blog-post v-for="post in posts" v-bind:key="post.id" v-bind:title="post.title"></blog-post>
+    </div>
     <script type="text/javascript">
-        var header_a = Vue.extend({
-            template: '<p>{{message}}-{{a}}</p>',
-            data: function() {
-                return {
-                    message: 'Hello ，I’m Header'
-                }
-            },
-            props: ['a']
+        Vue.component('blog-post', {
+            props: ['title'],
+            template: '<h3>{{ title }}</h3>'
         });
-        new header_a({
-            propsData: {
-                a: 1
+        new Vue({
+            el: "#blog-post-demo",
+            data: {
+                posts: [{
+                    id: 1,
+                    title: 'My journey with Vue'
+                }, {
+                    id: 2,
+                    title: 'Blogging with Vue'
+                }, {
+                    id: 3,
+                    title: 'Why Vue is so fun'
+                }]
             }
-        }).$mount('header');
+        });
     </script>
 </body>
 
