--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
         <li>
             <a href="./example/modal.1.html">Modal实例1</a>
         </li>
+        <li>
+            <a href="./example/menu-tab.html">menu-tab实例</a>
+        </li>
     </ol>
     <hr>
     <h3>第五季：Vue内置组件</h3>
