--- a/index.html
+++ b/index.html
@@ -147,6 +147,9 @@
         <li>
             <a href="./example/slot.html">vue-slot</a>
         </li>
+        <li>
+            <a href="./example/emit-props.html">emit-props</a>
+        </li>
     </ol>
 
     <h3>第六季：Vue之router</h3>
